# ChangeLog for dev-perl/Cache-Cache
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cache-Cache/ChangeLog,v 1.33 2006/08/04 22:52:59 mcummings Exp $

  04 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Cache-Cache-1.03.ebuild, Cache-Cache-1.04.ebuild, Cache-Cache-1.05.ebuild:
  Adding perl dep; fixed DEPEND

  03 Jul 2006; Christian Hartmann <ian@gentoo.org> Cache-Cache-1.03.ebuild,
  Cache-Cache-1.04.ebuild, Cache-Cache-1.05.ebuild:
  Fixed RDEPEND wrt bug #134781; fixed DEPEND

  29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  Cache-Cache-1.05.ebuild:
  Keyworded ~hppa

*Cache-Cache-1.05 (23 Jun 2006)

  23 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  +Cache-Cache-1.05.ebuild:
  Version bump upstream

  13 Feb 2006; <mcumming@gentoo.org> Cache-Cache-1.03.ebuild,
  Cache-Cache-1.04.ebuild:
  Virtual for perl-core dep

  06 Feb 2006; Simon Stelling <blubb@gentoo.org> Cache-Cache-1.04.ebuild:
  stable on amd64

  04 Feb 2006; Aron Griffis <agriffis@gentoo.org> Cache-Cache-1.04.ebuild:
  Mark 1.04 stable on ia64

  31 Jan 2006; Aron Griffis <agriffis@gentoo.org> Cache-Cache-1.04.ebuild:
  Mark 1.04 stable on alpha

  15 Jan 2006; Michael Hanselmann <hansmi@gentoo.org>
  Cache-Cache-1.04.ebuild:
  Stable on ppc.

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  Cache-Cache-1.04.ebuild:
  Marking stable sparc x86

  28 Nov 2005; Tom Gall <tgall@gentoo.org> Cache-Cache-1.04.ebuild:
  stable on ppc64

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org> Cache-Cache-1.04.ebuild:
  add ~ia64

  25 May 2005; Michael Cummings <mcummings@gentoo.org>
  Cache-Cache-1.03.ebuild:
  dev-perl/Storable => perl-core/Storable migration

  25 May 2005; Michael Cummings <mcummings@gentoo.org>
  Cache-Cache-1.04.ebuild:
  dev-perl/Storable => perl-core/Storable migration

  25 May 2005; Michael Cummings <mcummings@gentoo.org>
  Cache-Cache-1.03.ebuild: