@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Cache-Memcached
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cache-Memcached/ChangeLog,v 1.24 2006/08/04 22:54:07 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cache-Memcached/ChangeLog,v 1.25 2006/08/06 18:54:40 mcummings Exp $
+
+  06 Aug 2006; Michael Cummings <mcummings@gentoo.org>
+  Cache-Memcached-1.18.ebuild:
+  Marking amd64, sparc stable
 
   04 Aug 2006; Michael Cummings <mcummings@gentoo.org>
   Cache-Memcached-1.14.ebuild, Cache-Memcached-1.15.ebuild,
