@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Calendar-Simple
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Calendar-Simple/ChangeLog,v 1.4 2006/08/04 22:56:09 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Calendar-Simple/ChangeLog,v 1.5 2006/08/06 18:57:16 mcummings Exp $
+
+  06 Aug 2006; Michael Cummings <mcummings@gentoo.org>
+  Calendar-Simple-1.13.ebuild:
+  Marking amd64, sparc stable
 
   04 Aug 2006; Michael Cummings <mcummings@gentoo.org>
   Calendar-Simple-1.13.ebuild:
