@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Cache-Cache
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cache-Cache/ChangeLog,v 1.33 2006/08/04 22:52:59 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cache-Cache/ChangeLog,v 1.34 2006/08/06 18:53:09 mcummings Exp $
+
+  06 Aug 2006; Michael Cummings <mcummings@gentoo.org>
+  Cache-Cache-1.05.ebuild:
+  Marking amd64, sparc stable
 
   04 Aug 2006; Michael Cummings <mcummings@gentoo.org>
   Cache-Cache-1.03.ebuild, Cache-Cache-1.04.ebuild, Cache-Cache-1.05.ebuild:
